Update some secure and path in SwaggerUI
