# BackEnd/routes/posts.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { commentPost, getFeedPosts, getUserPosts, likePost, deletePost } from "../controllers/posts.js";
+import { commentPost, getFeedPosts, getUserPosts, likePost, deletePost, updatePost, getPostById } from "../controllers/posts.js";
 import { verifyToken } from "../middleware/auth.js";
 
 
@@ -9,12 +9,14 @@ const router = express.Router();
 router.get("/", verifyToken, getFeedPosts);
 router.get("/:userId/posts", verifyToken, getUserPosts);
 
+
 /* UPDATE */
 router.patch("/:id/like", verifyToken, likePost);
 router.patch("/:id/comment", verifyToken, commentPost);
 
-router.delete("/:id", deletePost); // add deletePost route
-
+router.get("/:id",verifyToken, getPostById);
+router.delete("/:id",verifyToken, deletePost); // add deletePost route
+router.put("/:id",verifyToken, updatePost); // update updatePost route
 
 
 export default router;
