# BackEnd/swagger.yaml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  description: "This is a experiment of an api development."
+  description: "JsonWeb Bearer Token and some processor of API"
   version: "1.0.0"
   title: "Hotpost Swagger API"
 host: "localhost:3001"
@@ -260,27 +260,12 @@ paths:
           '500':
             description: Internal Server Error
 
-  /posts:
-    get:
-      tags:
-        - "Posts"
-      summary: "Get all posts"
-      description: "Returns a list of all posts."
-      produces:
-        - "application/json"
-      responses:
-        200:
-          description: "Successful operation"
-          schema:
-            type: "array"
-            items:
-        401:
-          description: "Unauthorized"
-      security:
-        - bearerAuth: []
+
   /posts/{id}:
     delete:
       summary: Delete a post by ID
+      security:
+        - BearerAuth: []
       tags:
         - "Posts"
       parameters:
@@ -301,68 +286,66 @@ paths:
           description: Post not found
         '500':
           description: Internal server error
-  /posts/{userId}/posts:
-    get:
+    /posts/{id}:
+    put:
+      summary: Update a post by ID
       tags:
         - "Posts"
-      summary: "Get a user's posts"
-      description: "Returns a list of a user's posts."
-      produces:
-        - "application/json"
+      security:
+        - BearerAuth: []
       parameters:
-        - in: "path"
-          name: "userId"
-          description: "ID of the user whose posts to retrieve."
-          required: true
-          type: "string"
-        - in: "header"
-          name: "Authorization"
-          description: "Access token."
-          required: true
-          type: "string"
-      responses:
-        200:
-          description: "Successful operation"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Post"
-        401:
-          description: "Unauthorized"
-    security:
-        - bearerAuth: []
-  /posts/{id}/comment:
-    patch:
-      tags:
-        - "Posts"
-      summary: "Comment on a post"
-      description: "Add a comment to a post by its ID."
-      produces:
-        - "application/json"
-      parameters:
-        - in: "path"
-          name: "id"
-          description: "ID of the post to comment on."
-          required: true
-          type: "string"
-        - in: "header"
-          name: "Authorization"
-          description: "Access token."
-          required: true
-          type: "string"
-        - in: "body"
-          name: "comment"
-          description: "Comment content."
+        - in: path
+          name: id
+          description: ID of the post to update
           required: true
           schema:
-            type: "object"
+            type: string
+        - in: body
+          name: body
+          description: Request body for updating a post
+          required: true
+          schema:
+            type: object
             properties:
-              comment:
-                type: "string"
+              description:
+                type: string
+                description: New description for the post
       responses:
-        200:
-          description: "Successful operation"
-          schema:
-            $ref: "#/definitions/Post"
-        401:
-          description: "Unauthorized"
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message  
+    /posts/{id}:
+    get:
+        summary: Get a post by its ID
+        tags:
+        - "Posts"
+        security:
+        - BearerAuth: []
+        parameters:
+          - in: path
+            name: id
+            description: ID of the post to retrieve
+            required: true
+            schema:
+              type: string
+        responses:
+          200:
+            description: OK
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Post'
+          404:
+            description: Not Found
